[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "bombsite"
version = "0.1.0-alpha"
authors = [{name = "Elliot Simpson", email = "elliot@p-s.co.nz"}]
description = "Worms clone"
requires-python = ">=3.11"
dependencies = ["pygame==2.5.2", "numpy"]

[project.scripts]
bombsite = "bombsite.main:main"

[tool.mypy]
files = "src/"

[tool.ruff]
line-length = 100
extend-exclude = [".vscode/"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
known-first-party = ["bombsite"]
